# rosbag_msgs

./: .gitignore  Cargo.toml  README.md
examples/: read_bag.rs
mcp_server/: Cargo.toml
mcp_server/src/: image_utils.rs  main.rs  toolbox.rs
mcp_server/src/descriptions/: bag_info.md  fetch_image.md  images.md  info.md  messages.md  process_rosbag.md
src/: image_utils.rs  lib.rs  main.rs  value.rs
