[package]
name = "rosbag_msgs"
version = "0.1.0"
edition = "2024"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[workspace]
members = ["mcp_server"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
serde_json = "1.0"
byteorder = "1.5.0"
rosbag = "0.6.3"
ros_message = { git = "https://github.com/VertexStudio/rosrust.git", branch = "feature/allow-non-compliance" }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", features = ["png", "jpeg"] }
